compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__blocks_get_preserved_when_needed2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 282
expression: "\npub fn main() {\n    fn(x) { 1 + x }(2) * 3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    fn(x) { 1 + x }(2) * 3
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    (1 + 2) * 3.
