compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__do_not_inline_parameters_used_more_than_once.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 174
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(True)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(True)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> boolean().
main() ->
    begin
        Something = true,
        case Something of
            true ->
                Something;

            false ->
                false
        end
    end.
