compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_anonymous_function_call.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 219
expression: "\npub fn main() {\n  fn(a, b) { #(a, b) }(42, False)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  fn(a, b) { #(a, b) }(42, False)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> {integer(), boolean()}.
main() ->
    {42, false}.
