compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_anonymous_function_in_pipe.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 230
expression: "\npub fn main() {\n  1 |> fn(x) { x + 1 } |> fn(y) { y * y }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  1 |> fn(x) { x + 1 } |> fn(y) { y * y }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    _pipe = 1,
    _pipe@1 = _pipe + 1,
    begin
        Y = _pipe@1,
        Y * Y
    end.
