compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_function_which_calls_other_function.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 100
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(Ok(10), Error)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(Ok(10), Error)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> {ok, any()} | {error, integer()}.
main() ->
    case {ok, 10} of
        {ok, Value} ->
            {error, Value};

        {error, Error} ->
            {error, Error}
    end.
