compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_function_with_use_and_anonymous.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 140
expression: "\nimport gleam/bool\n\npub fn divide(a, b) {\n  use <- bool.lazy_guard(b == 0, fn() { panic as \"Cannot divide by 0\" })\n  a / b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam/bool

pub fn divide(a, b) {
  use <- bool.lazy_guard(b == 0, fn() { panic as "Cannot divide by 0" })
  a / b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([divide/2]).

-file("project/test/my/mod.gleam", 4).
-spec divide(integer(), integer()) -> integer().
divide(A, B) ->
    case B =:= 0 of
        true ->
            erlang:error(#{gleam_error => panic,
                    message => <<"Cannot divide by 0"/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"divide"/utf8>>,
                    line => 5});

        false ->
            case B of
                0 -> 0;
                Gleam@denominator -> A div Gleam@denominator
            end
    end.
